hphp/hack/test/typecheck/call_in_static_varray.php.coeffects.exp
File "call_in_static_varray.php", line 7, characters 22-27:
Invalid expression in constant initializer (Parsing[1002])
File "call_in_static_varray.php", line 7, characters 22-27:
Variable `$#capability` is undefined, or not always defined. (Naming[2050])
